TW: mediarecorder: re-fix cancel button in dark mode

--- a/addons/mediarecorder/style.css
+++ b/addons/mediarecorder/style.css
@@ -39,3 +39,8 @@
 .mediaRecorderPopupButtons button {
   margin-left: 0.5rem;
 }
+
+/* TW: Fixes cancel button in dark mode */
+.mediaRecorderPopupButtons button:nth-of-type(1) {
+  color: black;
+}
